# pytorch-examples

./: .gitignore  README.md  cifar_10_conv_net.ipynb  cifar_10_dense_net.ipynb  cifar_10_res_net.ipynb  cifar_10_res_net_pre_activation.ipynb  cifar_common.py  main.py  minst_conv_net.ipynb  mnist_ffnet.ipynb  plot.ipynb  pyproject.toml  update_ratio_tracker.py
ff_net/: main.py
llm/: tokenizer.ipynb
notes/: note-20251216.md  note-20251217.md  note-20251218.md  note-20251219.md  note-20251223.md
