[project]
name = "pytorch-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
